--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "builds": [{
-        "src": "vite.config.ts",
+        "src": "package.json",
         "use": "@vercel/static-build",
         "config": {
             "distDir": "dist"
